# hardinfo

hardinfo2/: CMakeLists.txt  Makefile  callbacks.c  callbacks.h  config.h  hardinfo.c  hardinfo.h  report.c  report.h  shell.c  shell.h  syncmanager.c  util.c
hardinfo2/arch/common/: blowfish.h  cryptohash.h  fft.h  fib.h  nqueens.h  raytrace.h
hardinfo2/arch/linux/common/: modules.h
hardinfo2/arch/linux/x86/: x86_64
